made socketio use protoype architecture

--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "BSD-2-Clause",
   "dependencies": {
-    "express": "~4.13.3"
+    "express": "~4.13.3",
+    "async": "~1.5.0"
   }
 }
