--- a/socketio/package.json
+++ b/socketio/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "express": "~4.10.2",
     "socket.io": "~1.3.7",
-    "socket.io-client": "1.3.7"
+    "socket.io-client": "1.3.7",
+    "requirejs": "~2.1.22"
   }
 }
